--- a/src/components/sideBar.css
+++ b/src/components/sideBar.css
@@ -1,19 +1,20 @@
 .item:hover {
   cursor: pointer;
   transform: scale(1.1);
+  transition: transform 0.3s;
 }
 
 .side-menu {
   height: 100%;
   width: 5vw;
-  background: 'whitesmoke';
-  padding: '10px';
-  display: 'grid';
-  justify-content: 'center';
-  position: 'fixed';
-  top: '0';
-  left: '0';
-  align-content: 'space-evenly';
-  box-sizing: 'border-box';
-  box-shadow: 'inset 0px 0px 10px grey';
+  background: whitesmoke;
+  padding: 10px;
+  display: grid;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  align-content: space-evenly;
+  box-sizing: border-box;
+  box-shadow: inset 0px 0px 10px grey;
 };
